# PolyLaue

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
polylaue/: __init__.py  main.py  typing.py
polylaue/model/: PolyLaueCore.py  abcr  editable.py  hkl_provider.py  io.py  project.py  project_manager.py  roi_manager.py  scan.py  section.py  serializable.py  series.py  state.py
polylaue/model/core/: __init__.py  angular_shift.py  burn.py  burn_reflections.py  (+3 more)
polylaue/ui/: async_worker.py  background_poller.py  burn_dialog.py  burn_workflow.py  editor.py  find_dialog.py  frame_tracker.py  image_view.py  main.py  main_window.py  point_auto_picker.py  point_selector.py  prediction_matcher.py  reflections_editor.py  reflections_style.py  reflections_style_editor.py  scan_position_coords_dialog.py  scientificspinbox.py  series_editor.py  track_dialog.py
polylaue/utils/: coordinates.py  resource_loader.py  singleton.py  version.py
scripts/: add_copyright_to_source_files.py  create_reflections_table_example.py
tests/: conftest.py  test_find.py  test_live_acquisition.py  test_model.py  test_project_manager.json  test_serialize.py  test_track.py
tests/data/: indexing.xy  ref_indexing_abc_matrix0.npy  ref_refinement_abc_matrix.npy  refinement.xy
tests/interactive_ui/: project_navigator.py
utils/reflections_table_editor/: .gitignore  create_tables_from_npz_files.py  crystal_to_txt.py  example_script.py  modify_crystal.py  reflections_table_editor.py  remove_predictions_table.py  set_crystals_table.py  txt_to_crystal.py
(+35 files in other folders)
