[build-system]
requires = ['setuptools', 'setuptools_scm']
build-backend = 'setuptools.build_meta'

[project]
name = 'polylaue'
requires-python = '>=3.11'
dynamic = ['version']
dependencies = [
    'fabio',
    'h5py',
    'numba',
    'numpy',
    'platformdirs',
    'pyside6',
    'pyqtgraph',
    'pillow',
    'scipy',
]
readme = 'REAMDE.md'

[project.scripts]
polylaue = 'polylaue.main:main'

[tool.black]
line-length = 79
skip-string-normalization = true
